# elock

./: .gitignore  configure.ac
.tx/: config
data/: Makefile.am  elock.ini
debian/: changelog  control  copyright  elock.install  rules
po/: POTFILES  be.po  bg.po  bn_IN.po  ca.po  cs.po  de.po  elock.pot  en.po  es.po  fr.po  hu.po  it.po  ja.po  lv.po  nl.po  pl.po  ru.po  sv.po  uk.po  zh.po  zh_CN.po
src/: Makefile.am  elock.c
themes/: .gitignore  Makefile.am  elock.edc  elock.edj
themes/azbooka/: elock.edc
themes/default/: elock.edc
